Added Choice Windows and separated MessageWindow into a BaseWindow super - Fixed a rounding error in SplitSprite; - Added a MessageCommand for events; - Added a method for showing messages; - Added some more utility methods; - Implemented ChoiceWindow

--- a/mkxp.conf
+++ b/mkxp.conf
@@ -1,2 +1,6 @@
 customScript=scripts/start.rb
 rgssVersion=3
+dataPathOrg=mkorgfolder
+dataPathApp=mkappfolder
+useScriptNames=true
+execName=MK Starter Kit
