Updated Ruby to 2.5.6 for Windows and removed old executables.
- Added needed libraries for the self-compiled mkxp.exe;
- Attempted to replace the executable icon;
- Changed window name to MK Starter Kit

--- a/mkxp.conf
+++ b/mkxp.conf
@@ -1,7 +1,4 @@
 customScript=scripts/start.rb
 rgssVersion=3
-dataPathOrg=mkorgfolder
-dataPathApp=mkappfolder
 useScriptNames=true
-execName=MK Starter Kit
-iconPath=/gfx/misc/logo.png
+windowTitle=MK Starter Kit
